Fix: showPasswordButton border color on dark mode

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -124,5 +124,9 @@ body {
     .ql-toolbar.ql-snow {
       background: #818181 !important;
     }
+
+    #showPasswordButton {
+      border-color: #333a49;
+    }
   }
 }
